* fix NEWS.
* build system: fix the '-dirty' suffix in the commit identifier generated by
  Makefile.conf .
* DEPENDENCIES: Require pEpEngineSequoiaBackend v1.1.0 , which contains some
  security fixes.

v3.3.0-RC2  2023-05-18
* Make PEP_LOG_ASYNC actually take effect, but calling
  config_enable_log_synchronous *after* the log subsystem has been initialised.
  No visible API change, but when defining PEP_LOG_ASYNC and with the database
  log destination configured in the user should feel the Engine to be faster.
* pEp_abort_unless_PEP_NOABORT: add a session parameter (as the only parameter);
  this is important in case the function is called by adapters.
* build system improvements: add the CPP macros
  * PEP_ENGINE_BRANCH
  * PEP_ENGINE_COMMIT
  * PEP_ENGINE_COMMIT_DATE
  defined by the makefile directly on the compiler command line, as string
  literals.  Platforms not using make to build the Engine should supply these.
* in case of assertion or requirement failure print the expansion of the macros
  above, to help people reporting bugs.  No API change.
* minor internals overhaul: build system, logging entries, whitespace, some
  minor factoring.
* When initialising database connection run the correct pragma:
    PRAGMA foreign_keys=ON;
  with an "s".  The incorrect PRAGMA name I had written before, omitting the
  trailing "s", was silently ignored; some SQL statements in the Engine rely on
  CASCADE constraints being enforced, and the missing constraint caused very
  subtle inconsistencies and changes of behaviour, for example breaking
  replace_userid..
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/166 (this
  bug probably did not affect any released version).

v3.3.0-RC1  2023-05-11
* Make string lists and identity lists nicer to use, with new non-destructive
  functions.  These functions are all declared as API functions in order for
  them to be accessible to the adaptors as well.