@@ -284,7 +284,10 @@ PEP_STATUS identity_known_to_use_pEp(PEP_SESSION session,
     if (EMPTYSTR(identity->user_id)) {
         LOG_CRITICAL("WRONG WRONG WRONG WRONG: This is https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/162 ");
         LOG_IDENTITY_CRITICAL("This identity has no user id.  This is very wrong!  Please send a detailed log to positron.  (Working aroud the issue for now.)", identity);
-        // TEMPORARY: work around the issue and go on, instead of failing on a broken requirement
+        // TEMPORARY: work around the issue and go on, instead of failing on a broken requirement. BEGIN
+        * known_to_use_pEp = false;
+        return PEP_STATUS_OK;
+        // TEMPORARY: work around the issue and go on, instead of failing on a broken requirement. END
     }
     // TEMPORARY: end
     /* Sanity checks. */
