@@ -1,6 +1,11 @@
 * fix NEWS.
 * build system: fix the '-dirty' suffix in the commit identifier generated by
   Makefile.conf .
+* As a temporary workaround for
+  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/168
+  replace an assertion with a visible log message printing “WRONG WRONG WRONG
+  WRONG”.
+  This will make it possible to test the Engine without being bothered by crashes
 * DEPENDENCIES: Require pEpEngineSequoiaBackend v1.1.0 , which contains some
   security fixes.
 
